# M.I.R.A

./: .env.example  .gitignore  Makefile  README.md  app_entry.py  environment.yml  launch.sh  main.py  pyproject.toml  setup_app.py
assets/wakewords/: Hey-Mira.ppn
mira-ui/: Package.swift  README.md
mira/agents/: booking_agent.py  browser_agent.py  browser_worker.py  buying_agent.py  calendar_agent.py  email_agent.py  music_agent.py  music_agent_ytautoplay.py  music_worker.py  planner_agent.py  weather_agent.py  whatsapp_agent.py
mira/core/: brain.py  config.py  domain_trust.py  recorder.py  stt.py  wakeword.py
mira/memory/: faiss_memory.py  sqlite_memory.py  unified_memory.py
mira/playback/: player.py
mira/tts/: cartesia.py
mira/ui/: avatar.py
mira/utils/: audio_utils.py  bgloop.py  logger.py  pdf_utils.py
mira_stylist/: .env.example  README.md  __init__.py  __main__.py  config.py
mira_stylist/api/: app.py  dependencies.py
mira_stylist/demo/: index.html
mira_stylist/docs/: architecture.md  browser_extension_plan.md  catvton_pipeline_audit.md  image_first_ingestion.md  learned_vton_backend.md  mobile_lidar_notes.md
mira_stylist/extension/: README.md  background.stub.ts  content.stub.ts  manifest.stub.json
mira_stylist/mobile_examples/: ios_image_share_stub.swift  ios_lidar_capture_stub.swift
mira_stylist/models/: __init__.py  api.py  avatar.py  common.py  garment.py  garment_input.py  jobs.py  outfit.py  preprocessing.py  tryon.py  vision.py  vton.py
mira_stylist/native/: apple_vision_body_pose.swift  (+1 more)
scripts/: gmail_auth.py  site_login.py  test_vton_pipeline.py
tests/: conftest.py  test_browser_runtime.py  test_calendar_tools.py  test_confirmation_resume.py  test_dashboard.py  test_domains.py  test_install_wizard.py  test_llm_gateway.py  test_memory.py  test_memory_tools.py  test_orchestrator.py  test_providers.py  test_router.py  test_scheduler.py  test_session.py  test_timewords.py
ui/: .gitignore  README.md  project.yml
(+191 files in other folders)
